--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Open+Sans&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -16,7 +17,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 20vh;
+  height: 10vh;
 }
 
 .header .nav .nav-list .nav-item .nav-link {
@@ -28,7 +29,22 @@
   margin-left: 5vw;
 }
 
-.landing-page {
+.landing {
+  background: #333 url("/images/quino-al-mBQIfKlvowM-unsplash-450w.jpg") no-repeat;
+  background-size: cover;
+  background-blend-mode: multiply;
   height: 80vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.landing .landing-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 /*# sourceMappingURL=main.css.map */
