Started portfolio section

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -47,7 +47,7 @@ $black: #333;
             }
             .nav-item + .nav-item {
                 margin-left: 5vw;
-                background-color: $off-white;
+                // background-color: $off-white;
             }
             // .external-link {
             //     color: $white;
