--- a/styles/main.scss
+++ b/styles/main.scss
@@ -25,9 +25,9 @@ body {
 $off-white: #CCC; 
 $white: #F2F2f2;
 $black: #333;
+$gray: #888;
 $azure-blue: #0080FF;
 $amber: #FFBF00;
-$amber-white: linear-gradient(90deg, rgba(255,191,0,1) 0%, rgba(255,205,54,1) 53%, rgba(255,238,186,1) 100%);
 
 
 // @@@Nav
@@ -84,9 +84,10 @@ $amber-white: linear-gradient(90deg, rgba(255,191,0,1) 0%, rgba(255,205,54,1) 53
 
 // @@@Landing
 .landing {
-    background: #333 url('/images/quino-al-mBQIfKlvowM-unsplash-450w.jpg') no-repeat;
+    background: $black url('/images/ian-keefe-LOUCuFYqkwE-unsplash-450w.jpg') no-repeat;
     background-size: cover;
     background-blend-mode: multiply;
+    background-position: center;
     height: 80vh;
     display: flex;
     flex-flow: column;
@@ -152,7 +153,7 @@ $amber-white: linear-gradient(90deg, rgba(255,191,0,1) 0%, rgba(255,205,54,1) 53
         padding: 2.34rem 0;
         width: 95%;
         margin: 0 auto 3.17rem;
-        box-shadow: #888 0 4px  4px;
+        box-shadow: $gray 0 4px  4px;
         background-color: $amber;
         .project-image {
             background-image: url(/images/Photography-Mocksite-Kenneth-Lu-Diaz.png);
@@ -169,7 +170,7 @@ $amber-white: linear-gradient(90deg, rgba(255,191,0,1) 0%, rgba(255,205,54,1) 53
             margin: 0 auto;
             max-width: 35ch;
             color: $white;
-            text-shadow: 1px 1px #888;
+            text-shadow: 1px 1px $gray;
         }
     }
 }
